<resources>
    <string name="app_name">FuelSort</string>
    <string name="title_activity_maps">FuelSort</string>
    <string name="title_activity_settings">Settings</string>
    <string name="carburante">Seleziona il carburante:</string>
    <string name="self_service">Self service:</string>
    <string name="self_service_info">Spunta per includere i distributori self-service alla ricerca.</string>
    <string name="kmxl">Chilometri per litro:</string>
    <string name="open_in">Open in</string>
    <string name="partenza">Partenza</string>
    <string name="destinazione">Destinazione</string>
    <string name="bottono_per_iniziare_la_ricerca">Bottono per iniziare la ricerca</string>
    <string name="elimina_il_segnaposto">Elimina il segnaposto</string>
    <string name="rimuovi_pin">Rimuovi pin</string>
    <string name="imposta_come_destinazione">Imposta come destinazione</string>
    <string name="setta_destinazione">Setta destinazione</string>
    <string name="imposta_come_punto_di_partenza">Imposta come punto di partenza</string>
    <string name="setta_partenza">Setta partenza</string>
    <string name="force_update">In caso di problemi forza l\'aggiornamento dei dati delle pompe di benzina.</string>
    <string name="force_update_title">Force update</string>
    <string name="distributore_activity_title">Distributore</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="background_image">background-image</string>
    <string name="impostazioni_stazioni_servizio">Impostazioni stazioni di servizio:</string>
    <string name="carburante_info">Solo le stazioni di servizio che offrono il carburante selezionato verranno mostrate.</string>
    <string name="dati_automobile">Dati automobile:</string>
    <string name="capacit_del_serbatoio">Capacità del serbatoio:</string>
    <string name="capacit_del_serbatoio_info">Inserisci i litri di benzina che può contentere il serbatoio.</string>
    <string name="kmxl_info">Inserisci il numero di chilometri che l\'auto compie con un litro di carburante.</string>
    <string name="or">oppure</string>
    <string name="l100km">Litri spesi per 100km:</string>
    <string name="l100km_info">Inserisci il numero di litri consumati in 100km di viaggio.</string>
    <string name="debug">Debug:</string>
    <string name="left_arrow"><b><![CDATA[<]]></b></string>
    <string name="right_arrow"><b><![CDATA[>]]></b></string>
    <string-array name="tipi_benzina_array">
        <item>Benzina</item>
        <item>Diesel</item>
        <item>GPL</item>
        <item>Metano</item>
    </string-array>
</resources>
