<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_element"
    android:background="@drawable/pin_layout_background">
    <LinearLayout
        android:id="@+id/addStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/green_pin_icon"
                android:contentDescription="@string/setta_partenza" />
        </RelativeLayout>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imposta_come_punto_di_partenza"/>
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/red_pin_icon"
                android:contentDescription="@string/setta_destinazione" />
        </RelativeLayout>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imposta_come_destinazione"/>
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/trash_icon"
                android:contentDescription="@string/rimuovi_pin" />
        </RelativeLayout>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimina_il_segnaposto"/>
    </LinearLayout>

</LinearLayout>